# ChangeLog for app-misc/mc
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2

*mc-4.6.0-r6 (13 Apr 2004)

  13 Apr 2004; Heinrich Wendel <lanius@gentoo.org> mc-4.6.0-r2.ebuild,
  mc-4.6.0-r3.ebuild, mc-4.6.0-r4.ebuild, mc-4.6.0-r6.ebuild, metadata.xml,
  files/mc-4.6.0-vfs.patch:
  add patch to support .tbz and .tbz2 archives

*mc-4.6.0-r5 (29 Mar 2004)

  29 Mar 2004; Heinrich Wendel <lanius@gentoo.org> mc-4.6.0-r5.ebuild,
  files/mc-4.6.0-cpan-2003-1023.patch:
  security bug #45957, mark stable

  14 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> mc-4.5.55-r7.ebuild,
  mc-4.6.0-r2.ebuild, mc-4.6.0-r3.ebuild, mc-4.6.0-r4.ebuild:
  Don't assign default to S; header fix

  26 Dec 2003; Heinrich Wendel <lanius@gentoo.org> mc-4.5.55-r7.ebuild,
  mc-4.6.0-r2.ebuild, mc-4.6.0-r3.ebuild, mc-4.6.0-r4.ebuild:
  filter -malign-double (bug #36424)

  23 Dec 2003; Heinrich Wendel <lanius@gentoo.org> mc-4.6.0-r2.ebuild,
  mc-4.6.0-r3.ebuild, mc-4.6.0-r4.ebuild:
  fixed typo (bug #36375), marked -r3 stable

  18 Dec 2003; Guy Martin <gmsoft@gentoo.org> mc-4.6.0-r3.ebuild:
  Marked stable on hppa.

  07 Dec 2003; Heinrich Wendel <lanius@gentoo.org> mc-4.6.0-r3.ebuild,
  mc-4.6.0-r4.ebuild:
  added ~amd64

  06 Dec 2003; Heinrich Wendel <lanius@gentoo.org> mc-4.6.0-r3.ebuild,
  mc-4.6.0-r4.ebuild:
  fixed search path for smbpasswd, bug #34210

  13 Nov 2003; <tuxus@gentoo.org> mc-4.6.0-r3.ebuild:
  added mips to KEYWORDS

*mc-4.6.0-r4 (11 Oct 2003)

  11 Oct 2003; Heinrich Wendel <lanius@gentoo.org> mc-4.6.0-r4.ebuild:
  dynamic samba3 link, big thx to Michal 'Spock' Januszewski <spock@o2.pl>

*mc-4.6.0-r3 (27 Sep 2003)

  27 Sep 2003; Heinrich Wendel <lanius@gentoo.org> mc-4.6.0-r3.ebuild:
  added static samba lib to compile with samba 3.x

  02 Sep 2003; Heinrich Wendel <lanius@gentoo.org> mc-4.6.0-r1.ebuild,
  mc-4.6.0-r2.ebuild, mc-4.6.0.ebuild:
  fixed bug #27212, marked -r2 stable

*mc-4.6.0-r2 (21 Aug 2003)
