@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/mc
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+  08 May 2004; Heinrich Wendel <lanius@gentoo.org> mc-4.6.0-r5.ebuild,
+  mc-4.6.0-r6.ebuild:
+  fix syntax error
+
 *mc-4.6.0-r6 (13 Apr 2004)
 
   13 Apr 2004; Heinrich Wendel <lanius@gentoo.org> mc-4.6.0-r2.ebuild,
